# skir-rust-client

./: .gitignore  Cargo.toml  README.md  pre_commit.sh
.github/workflows/: ci.yml  publish.yml
src/: enum_adapter.rs  keyed_vec.rs  lib.rs  method.rs  reflection.rs  serializer.rs  serializers.rs  service.rs  service_client.rs  struct_adapter.rs  unrecognized.rs
